Added the Accessory Bag, fully functional with stats
Took 2 hours 4 minutes